--- a/config.toml
+++ b/config.toml
@@ -17,13 +17,13 @@ webservice_password = "8Z7Plc3p!!"
 [amos.import_currency]
 endpoint = "/updateCurrency"
 base_currency = "USD"
-applicables = [
-    { currency_code = "CHF", currency_name = "Swiss Franc" },
-    { currency_code = "EUR", currency_name = "Euro" },
-    { currency_code = "GBP", currency_name = "British Pound" },
-    { currency_code = "JPY", currency_name = "Japanese Yen" },
-    { currency_code = "KRW", currency_name = "Korean Won" },
-    { currency_code = "SGD", currency_name = "Singapore Dollar" },
-    { currency_code = "THB", currency_name = "Thai Baht" },
-    { currency_code = "USD", currency_name = "United States Dollar" },
+currencies = [
+    { code = "CHF", name = "Swiss Franc" },
+    { code = "EUR", name = "Euro" },
+    { code = "GBP", name = "British Pound" },
+    { code = "JPY", name = "Japanese Yen" },
+    { code = "KRW", name = "Korean Won" },
+    { code = "SGD", name = "Singapore Dollar" },
+    { code = "THB", name = "Thai Baht" },
+    { code = "USD", name = "United States Dollar" },
 ]
